2003-01-09  Jordi Mallach  <jordi@sindominio.net>

	* src/systray.c (systray_menu): Add mnemonics for menu items, change
	"Exit" to "Quit". Added separator.

2003-01-09  Jordi Mallach  <jordi@sindominio.net>

	* src/map.c (path_type_dialog): Fix compile warning.

	* src/init.c (window_menu_file_close), (main):
	* src/net.c (action_send_to_connection): Only show connection
	tabs if there's more than one, and set the main tab label to the
	connection name.
	Add a connection status icon to the connection tab.
	* src/eggtrayicon.[ch]:
	* src/tray.c: New file, notification area icon to show/hide the
	main window, and notify about new data.
	Patches by Nuno Sousa <nunofgs@punkass.com>.

	* src/Makefile.am (SUBDIRS): Add pixmaps.
	(GMPIXMAPSDIR): Added new directory for gnome-mud icons.
	(gnome-mud_SOURCES): Updated.
	* src/pixmaps/Makefile.am: New.
	* src/pixmaps/connection.png, src/pixmaps/connection-offline.png:
	Added.

	* configure.ac (AC_OUTPUT): Updated.

	* NEWS: Updated.

2004-01-03  Jordi Mallach  <jordi@sindominio.net>

	* src/modules_api.[ch], src/net.c: Reapply Quim's patch, with a pair
	of changes suggested by Dani Carbonell to fix the potential
	segfaults.

2004-01-02  Jordi Mallach  <jordi@sindominio.net>

	* src/modules_api.[ch], src/net.c: Unapply plugin patch which was
	causing segfaults.

	* Makefile.am (EXTRA_DIST): Add
	intltool-modules/XML/Parser/Style/OrigTree.pm.

	* NEWS: Updated.
	
	* configure.ac: Released gnome-mud 0.10.4a.

2003-12-22  Jordi Mallach  <jordi@sindominio.net>

	* Makefile.am (EXTRA_DIST): Duh, remove configure.in.

2003-12-22  Jordi Mallach  <jordi@sindominio.net>

	* NEWS: Updated for 0.10.4.
	
	* configure.ac: Release gnome-mud 0.10.4.

2003-12-19  Robin Ericsson  <lobbin@localhost.nu>

	* Applied patch from Quim Rovira.

	* NEWS: Updated.
	
	* src/modules_api.c (plugin_connection_send): Added.

	* src/modules_api.h (plugin_connection_send): Prototype added.

	* src/net.c (action_send_to_connection): Adds an extra \n so that